--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-streamlit==0.58.0
-pandas==0.25.3
-numpy==1.18.1
-scikit-learn==0.22.1
+numpy==1.16.4
+pandas==0.24.2
+pydeck==0.3.0
+streamlit==0.57.3
+plotly==4.0.0
